[gd_scene load_steps=10 format=2]

[ext_resource path="res://Bob.gd" type="Script" id=1]
[ext_resource path="res://Texture/Player/bunny1_jump.png" type="Texture" id=2]
[ext_resource path="res://Texture/Player/bunny1_ready.png" type="Texture" id=3]
[ext_resource path="res://Texture/Player/bunny1_stand.png" type="Texture" id=4]
[ext_resource path="res://Texture/Spawn/spawn.png" type="Texture" id=5]
[ext_resource path="res://Texture/Spawn/spawn2.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), null, ExtResource( 2 ), null, ExtResource( 4 ), null, ExtResource( 2 ), null, ExtResource( 4 ), null, ExtResource( 2 ), null, ExtResource( 4 ), null, ExtResource( 4 ), null, ExtResource( 2 ), null ],
"loop": true,
"name": "death",
"speed": 4.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), null, null, ExtResource( 4 ), null, null ],
"loop": true,
"name": "die",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 47.9461, 57.8426 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "build",
"speed": 5.0
}, {
"frames": [ null ],
"loop": false,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "build2",
"speed": 5.0
} ]

[node name="Bob" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "run"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 3.15793, 32.6315 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 42.4589, 27.8636 )

[node name="PositionBuild" type="Position2D" parent="."]
position = Vector2( 472.326, 261.232 )

[node name="Spawn" type="AnimatedSprite" parent="PositionBuild"]
position = Vector2( 0, 60 )
frames = SubResource( 3 )
animation = "0"

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -47.4589, 27.2002 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.5
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
